[package]
name = "cnav"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Charles <bryancharlesdnz@gmail.com>"]
description = "A fast code navigation tool powered by ripgrep for quickly finding and jumping to symbols in your codebase"
license = "MIT"
repository = "https://github.com/agace/cnav"
homepage = "https://github.com/agace/cnav"
readme = "README.md"
keywords = ["navigation", "search", "ripgrep", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cnav"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
